--- a/installations/templates/installations/change_status_modal.html
+++ b/installations/templates/installations/change_status_modal.html
@@ -26,7 +26,7 @@
                         <p class="mb-1"><strong>الحالة الحالية:</strong> 
                             <span class="badge badge-info">{{ installation.get_status_display }}</span>
                         </p>
-                        <p class="mb-0"><strong>تاريخ الجدولة:</strong> {{ installation.scheduled_date|date:"d/m/Y" }}</p>
+                        <p class="mb-0"><strong>تاريخ الجدولة:</strong> {{ installation.scheduled_date|date:"Y-m-d" }}</p>
                     </div>
                 </div>
             </div>
