--- a/installations/templates/installations/create_modification.html
+++ b/installations/templates/installations/create_modification.html
@@ -121,7 +121,7 @@
                                     <div class="mt-3">
                                         <p><strong>رقم الطلب:</strong> {{ installation.order.order_number }}</p>
                                         <p><strong>العميل:</strong> {{ installation.order.customer.name }}</p>
-                                        <p><strong>تاريخ التركيب:</strong> {{ installation.scheduled_date|date:"d/m/Y" }}</p>
+                                        <p><strong>تاريخ التركيب:</strong> {{ installation.scheduled_date|date:"Y-m-d" }}</p>
                                         <p><strong>موعد التركيب:</strong> {{ installation.scheduled_time|time:"H:i" }}</p>
                                         <p><strong>الفريق:</strong> {{ installation.team.name|default:"غير محدد" }}</p>
                                         <p><strong>الحالة الحالية:</strong> 
