--- a/installations/templates/installations/daily_schedule.html
+++ b/installations/templates/installations/daily_schedule.html
@@ -326,7 +326,7 @@
         <div class="card-header py-3 no-print">
             <h6 class="m-0 font-weight-bold text-primary">
                 <i class="fas fa-table"></i>
-                الجدول اليومي - {{ form.date.value|date:"d/m/Y" }}
+                الجدول اليومي - {{ form.date.value|date:"Y-m-d" }}
                 <span class="badge badge-info ml-2">{{ installations.count }} تركيب</span>
             </h6>
         </div>
