--- a/installations/templates/installations/quick_schedule_installation.html
+++ b/installations/templates/installations/quick_schedule_installation.html
@@ -133,7 +133,7 @@
                             <p><strong>العميل:</strong> {{ order.customer.name }}</p>
                         </div>
                         <div class="col-md-6">
-                            <p><strong>تاريخ الطلب:</strong> {{ order.created_at|date:"d/m/Y" }}</p>
+                            <p><strong>تاريخ الطلب:</strong> {{ order.created_at|date:"Y-m-d" }}</p>
                             <p><strong>المبلغ الإجمالي:</strong> {{ order.total_amount|floatformat:2 }} ج.م</p>
                         </div>
                     </div>
