--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -412,8 +412,8 @@
                     <div class="stat-icon mb-3">
                         <i class="fas fa-tools"></i>
                     </div>
-                    <div class="stat-number">{{ installations_stats.total|default:0 }}</div>
-                    <div class="stat-label">التركيبات</div>
+                    <div class="stat-number">{{ installation_orders_stats.total|default:0 }}</div>
+                    <div class="stat-label">طلبات التركيب</div>
                 </div>
             </div>
         </div>
