--- a/customers/templates/customers/customer_form.html
+++ b/customers/templates/customers/customer_form.html
@@ -284,7 +284,7 @@
                                 <i class="fas fa-eye me-1"></i>
                                 عرض بيانات العميل
                             </a>
-                            <a href="{% url 'orders:order_create' %}?customer_id={{ existing_customer.pk }}" class="btn btn-success btn-sm">
+                            <a href="{% url 'orders:order_create' %}?customer={{ existing_customer.pk }}" class="btn btn-success btn-sm">
                                 <i class="fas fa-plus me-1"></i>
                                 إنشاء طلب جديد
                             </a>
@@ -544,7 +544,7 @@ function showDuplicateCustomerCard(customer) {
                                 <i class="fas fa-eye me-1"></i>
                                 عرض بيانات العميل
                             </a>
-                            <a href="/orders/create/?customer_id=${customer.id}" class="btn btn-success btn-sm">
+                            <a href="/orders/create/?customer=${customer.id}" class="btn btn-success btn-sm">
                                 <i class="fas fa-plus me-1"></i>
                                 إنشاء طلب جديد
                             </a>
